<resources>
    <string name="todo_list_title">My TODOs</string>
    <string name="todo_form_title">Add new TODO</string>
    <string name="todo_details_title">Details</string>
    <string name="todo_field_title_placeholder">Title</string>
    <string name="todo_field_body_placeholder">Body</string>
    <string name="menu_add">Add</string>
    <string name="button_submit">Submit</string>
    <string name="button_delete">Delete</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="todo_delete_confirm_title">Delete todo</string>
    <string name="todo_delete_confirm_body">You are about to delete this TODO.\nAre you sure you want to continue?</string>
</resources>
