<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:text="@string/todo_delete_confirm_title"
            android:textAppearance="?textAppearanceHeadline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_delete_confirm_body"
            android:textAppearance="?textAppearanceBody1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/accept"
            style="?materialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_yes"
            app:layout_constraintEnd_toStartOf="@id/dismiss"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/body" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dismiss"
            style="?materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/accept"
            app:layout_constraintTop_toTopOf="@id/accept" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
