<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".form.TodoFormFragment">

    <data>

        <variable
            name="vieWModel"
            type="com.example.todo.todos.view.form.TodoFormViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/todo_field_title_placeholder"
                android:paddingBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/body_layout"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todo_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@={vieWModel.title}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/body_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/todo_field_body_placeholder"
                android:paddingBottom="8dp"
                app:layout_constraintTop_toBottomOf="@id/title_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todo_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="2"
                    android:text="@={vieWModel.body}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{vieWModel.readyToSubmit}"
                android:paddingBottom="8dp"
                android:text="@string/button_submit"
                android:onClick="@{() -> vieWModel.onSubmit()}"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                app:title="@string/todo_form_title" />

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
